fix: scope template get and fork to public or owner
